# friday-tony-stark-demo

./: .env.example  .env.livekit.local.example  .gitignore  README.md  agent_friday.py  pyproject.toml  server.py
.omo/run-continuation/: ses_1a7170c9affefXh4UbsricJo6d.json
desktop-ui/: .env.local.example  MINIMAX_2_7_PROMPT.md  README.md  REFERENCE_NOTES.md  electron.vite.config.ts  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
desktop-ui/electron/: main.ts  preload.ts
desktop-ui/src/: App.tsx
desktop-ui/src/components/: PlaygroundConnect.tsx
desktop-ui/src/components/chat/: ChatMessageInput.tsx  ChatTile.tsx
desktop-ui/src/components/config/: AttributesInspector.tsx  AudioInputTile.tsx  ConfigurationPanelItem.tsx  NameValueRow.tsx
desktop-ui/src/components/debug/: DebugPanel.tsx
desktop-ui/src/components/memory/: MemoryPanel.tsx
desktop-ui/src/components/playground/: Playground.tsx  PlaygroundHeader.tsx  PlaygroundTile.tsx
desktop-ui/src/hooks/: useConfig.tsx  useFridayDebug.ts
desktop-ui/src/styles/: globals.css
docs/: livekit-local.md
friday/prompts/: templates.py
friday/resources/: data.py
friday/stt/: __init__.py  sherpa_parakeet.py
friday/tools/: __init__.py  memory.py  system.py  utils.py  web.py
scripts/: check-livekit-local.ps1  install-livekit-server-windows.ps1  restore-livekit-cloud-env.ps1  start-friday-stack.ps1  start-livekit-local.ps1  stop-friday-stack.ps1  use-livekit-local.ps1
